--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -9,3 +9,4 @@ html(lang="en")
         Pug is a terse and simple templating language with a
         strong focus on performance and powerful features.
       button#button Add Css
+      img(src="../assets/images/logo.png")
