--- a/src/template/components/_header.pug
+++ b/src/template/components/_header.pug
@@ -1,9 +1,9 @@
 header.main-header
         a.logo(href="#")
             span.logo-mini
-                img(src='../assets/images/logo.png' style="max-height:50px;") 
+                img(src='~assets/images/logo.png' style="max-height:50px;") 
             span.logo-lg
-                img(src='../assets/images/logo.png' style="max-height:50px;")
+                img(src='~assets/images/logo.png' style="max-height:50px;")
 
         nav.navbar.navbar-static-top(role="navigation")
             a.sidebar-toggle(href="#" data-toggle="push-menu" role="button")
