--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -4,6 +4,7 @@ html(lang="en")
     title= pageTitle
     base(href="/")
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     //- bootstrap
     link(rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css")
     //- font-awesome
