fix auto generate html crash

--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -1,26 +1,3 @@
 extends ../index.pug
 block content
-    div(style="width:1070px")
-        img(src="~assets/images/real_world.png" usemap="#planetmap" style="width:100%")
-        map(name="planetmap")
-            area(shape="rect" coords="310 320,400,280" href="/RealWorld/CooksRD" title="Off Line")  
-            area(shape="rect" coords="530,415,590,400" href="/RealWorld/LakeJames" title="Off Line")
-            area(shape="rect" coords="822,24,922,42" href="/Fuel/HOWICKFuelForm" title="1")
-            area(shape="rect" coords="550,150,640,170" href="/Fuel/HVONFUELFORM" title="2")
-            area(shape="rect" coords="560,420,450,435" href="/Fuel/LOMINGTONFuelForm" title="3")
-
-    div(class="modal fade" id="real-world-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true")
-        div(class="modal-dialog" role="document")
-            div(class="modal-content")
-                div(class="modal-header")
-                    h5(class="modal-title") Modal title
-                    button(type="button" class="close" data-dismiss="modal" aria-label="Close")
-                        span(aria-hidden="true") &times;
-                div(class="modal-body")
-                    p Modal body text goes here.
-                div(class="modal-footer")
-                    button(type="button" class="btn btn-primary") Save changes
-                    button(type="button" class="btn btn-secondary" data-dismiss="modal") Close
-block script
-    script
-        include ../../scripts/real-world.js
+    div asd
